@@ -27,6 +27,7 @@
 | Release Max v0.3.32-alpha |
 +---------------------------+
 
+2007-02-01  Admin       Bug         Fixed 102# - SWF converter broken with FTP stored files (>8kb) (Chris)
 2007-02-01  Maintenance Bug         Fixed #100 - Time targeting for high priority banners not working (Chris)
 2007-01-18  General     Feature     Fixed #26 - Added campaign capping (Andrew)
 2007-01-17  Delivery    Bug         Fixed #38 - {url_prefix} replacement broken (Matteo)
